// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Text /> renders bold text 1`] = `
<div>
  <div
    class="Textweb__Text-sc-6jf9e4-0 bzRITc"
    color="shade.980"
    data-testid="ds-text"
  >
    Displaying some text
  </div>
</div>
`;

exports[`<Text /> renders regular text 1`] = `
<div>
  <div
    class="Textweb__Text-sc-6jf9e4-0 eKxMBE"
    color="shade.980"
    data-testid="ds-text"
  >
    Displaying some text
  </div>
</div>
`;

exports[`<Text /> renders text with display content auto aligned when align prop is of value "inherit" 1`] = `
<div>
  <div
    class="Textweb__Text-sc-6jf9e4-0 dYLxfq"
    color="shade.980"
    data-testid="ds-text"
  >
    Displaying some text
  </div>
</div>
`;

exports[`<Text /> renders text with display content auto aligned when align prop is of value "initial" 1`] = `
<div>
  <div
    class="Textweb__Text-sc-6jf9e4-0 cUzWrl"
    color="shade.980"
    data-testid="ds-text"
  >
    Displaying some text
  </div>
</div>
`;

exports[`<Text /> renders text with display content center aligned 1`] = `
<div>
  <div
    class="Textweb__Text-sc-6jf9e4-0 hTjrlE"
    color="shade.980"
    data-testid="ds-text"
  >
    Displaying some text
  </div>
</div>
`;

exports[`<Text /> renders text with display content right aligned 1`] = `
<div>
  <div
    class="Textweb__Text-sc-6jf9e4-0 frrVjD"
    color="shade.980"
    data-testid="ds-text"
  >
    Displaying some text
  </div>
</div>
`;

exports[`<Text /> renders underlined text 1`] = `
<div>
  <div
    class="Textweb__Text-sc-6jf9e4-0 cemcnY"
    color="shade.980"
    data-testid="ds-text"
  >
    Displaying some text
  </div>
</div>
`;
